Fixed bug in flight analysis causing error in "in sector" check at TP Fixed bug parsing igc file where the first fix position was undefined- caused hang if flight went over UTC midnight (ie: in New Zealand) Map initialisation now raises a semaphore- if necessary display of track waits until the map is loaded (avoids possible race condition on a slow link) Major css changes to improve presentation on narrow screens- instead of scrolling between map and barogram displays users now toggle using buttons. Changeover between wide and narrow screen modes is now at 900 virtual pixels- most 7 inch tablet users are now in "wide" mode in landscape, "narrow" in portrait. Barogram resize now replots on end resizing the window- simpler and more reliable than the resize plugin in this context Various hard and zero width soft spaces introduced in code generated text to improve presentation on small screens div.map css now includes "position: sticky"- avoids occasional bug where the map goes full screen on maximising the window.

--- a/igcviewer.css
+++ b/igcviewer.css
@@ -8,36 +8,37 @@ body {
 
 h1 {
     text-align: center;
+    font-size: 2em;
 }
+
+h2 {
+        display: inline-block;
+        font-size: 1.3em;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
 
 h3 {
     text-align: center;
     font-size: 1.2em;
 }
-
+    
 #requestdata {
     line-height: 2.5em;
 }
-
+    
 #requestdata input[type="text"] {
     width: 12em;
 }
 
-#titlediv  p {
+#titlediv {
+   line-height: 1;
     text-align: center;
-    line-height: 0.6;
     font-size: 0.8em;
 }
 
 #selector p {
     text-align: center;
-}
-
-div.halfwidth {
-    display: inline-block;
-    width: calc(50% - 30px);
-    padding-left: 10px;
-    padding-right: 10px;
 }
 
 .nowrap {
@@ -54,33 +55,9 @@ div.halfwidth {
 }
 
 #flightInfo {
-    float: right;
     margin-bottom: 20px;
     display: none;
-}
-
-#map {
-    width: 100%;
-    height: 85vh;
-    margin-bottom: 15px;
-    visibility: hidden;
-}
-
-#zoomtrack,#zoomlabel {
-display: none;
-}
-
-#righthalf   {
-visibility: hidden;
-}
-
-#barogram {
-    height: 60vh;
-    margin-bottom: 15px;
-    background: #E0FFFF;
-    width: 100%;
-    cursor: crosshair;
-}
+} 
 
 #slider {
     padding-bottom: 10px;
@@ -92,13 +69,7 @@ visibility: hidden;
  /* Default padding is huge in Internet Explorer.*/;
 }
 
-#righthalf {
-    position: absolute;
-    right: 0;
-}
-
 div.container {
-    display: table;
     width: 100%;
 }
 
@@ -114,34 +85,19 @@ div.container {
     width: 150px;
 }
 
-#map,#barogram {
-    max-height: 110vw;
-}
-
 #analyse {
     height: 3em;
     font-weight: bold;
+    margin-bottom: 50px;
 }
-
-
-
-
 
 input[name="tasksource"] {
     margin-right: 40px;
 }
 
-.notnow {
-    visibility: hidden;
-}
-
 #setunits   select {
     position: absolute;
     left: 10em;
-}
-
-button.toggle {
-    display: none;
 }
 
 #help, #about {
@@ -161,18 +117,11 @@ button.toggle {
     margin-bottom: 30px;
 }
 
-table#headerInfo {
-    border-spacing: 0.1em;
-}
-
-
 
 #headerInfo th {
     text-align: left;
     font-weight: bold;
 }
-
-
 
 #taskdata {
     display: none;
@@ -181,7 +130,7 @@ table#headerInfo {
     bottom: 0;
     left: 0;
     right: 0;
-    width: 20em;
+    width: 18em;
     height: 370px;
     padding: 15px;
     margin: auto;
@@ -219,7 +168,7 @@ table#headerInfo {
     bottom: 0;
     left: 0;
     right: 0;
-    width: 24em;
+    width: 20em;
     height: 280px;
     padding: 15px;
     margin: auto;
@@ -231,96 +180,235 @@ table#headerInfo {
     background-color: white;
 }
 
-#sectordefs {
-    display: none;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 22em;
-    height: 400px;
-    padding: 15px;
-    margin: auto;
-    border-style: solid;
-    border-width: 2px;
-    overflow: auto;
-    font-size: 0.9em;
-    z-index: 2000;
-    background-color: white;
-}
-
-#sectordefs input[type='text'] {
-    width: 3em;
-}
-
 button.floatright {
     float: right;
     margin-bottom: 5px;
 }
 
 #setenl {
-    display: none;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 18em;
     height: 350px;
-    padding: 15px;
-    margin: auto;
-    border-style: solid;
-    border-width: 2px;
-    overflow: auto;
-    font-size: 0.9em;
-    z-index: 2000;
-    background-color: white;
 }
 
 #setaltref {
-    position: fixed;
-    display: none;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 18em;
     height: 400px;
-    padding: 15px;
-    margin: auto;
-    border-style: solid;
-    border-width: 2px;
-    overflow: auto;
-    font-size: 0.9em;
-    z-index: 2000;
-    background-color: white;
-}
-
-#setunits {
-    position: fixed;
-    display: none;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 18em;
-    height: 350px;
-    padding: 15px;
-    margin: auto;
-    border-style: solid;
-    border-width: 2px;
-    overflow: auto;
-    font-size: 0.9em;
-    z-index: 2000;
-    background-color: white;
 }
 
 #enlthreshold, #enltime {
     width: 4ch;
 }
 
-@-ms-viewport {
-    width: extend-to-zoom;
-    zoom: 1.0;
+#prefs {
+line-height: 2em;
+margin-top: -20px;
 }
+
+.dialog {
+    position: fixed;
+    display: none;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    border-style: solid;
+    border-width: 2px;
+    overflow: auto;
+    width: 22em;
+    padding: 15px;
+    font-size: 0.9em;
+    z-index: 2000;
+    background-color: white;
+}
+
+#righthalf {
+    position: absolute;
+    right: 0;
+    visibility: hidden;
+}
+
+#sectordefs {
+    height: 400px;
+}
+
+#sectordefs input[type='text'] {
+    width: 3em;
+}
+
+#setunits {
+    height: 350px;
+}
+    
+#infobox {
+visibility: hidden;
+}
+    
+ @media screen and (min-width: 900px) {
+
+ h1 {
+     font-size: 2em;
+ }
+     
+#righthalf, #mapwrapper  {
+height:  80vh;
+min-height: 25vw;
+}
+
+     
+#showmap {
+display: none;
+}
+     
+    div.halfwidth {
+    display: inline-block;
+    width: calc(50% - 30px);
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#map,#barogram {
+    max-height: 110vw;
+}
+
+#map {
+    width: 100%;
+    height: 80vh;
+    min-height: 25vw;
+    margin-bottom: 15px;
+    visibility: hidden;
+    position: sticky;
+}
+
+#barogram {
+    height: 80%;
+    margin-bottom: 15px;
+     background: #E0FFFF;
+    width: 100%;
+    cursor: crosshair;
+}
+
+#headerInfo {
+    border-spacing: 0.1em;
+}
+
+#flightInfo {
+    float: right;
+}
+
+#mapbuttons {
+display: none;
+}
+
+button.toggle {
+    display: none;
+}
+ }
+@media screen and (max-width: 900px) {
+    h1 {
+     font-size: 2em;
+ }
+    
+    div.halfwidth   {
+        display: block;
+        width: 90%;
+        margin-left: auto;
+      margin-right: auto;
+    } 
+    
+#righthalf, #mapwrapper  {
+height:  65vh;
+min-height: 25vw;
+}
+    
+    #map,#barogram {
+    width: 100%;
+    height: 60vh;
+    margin-bottom: 15px;
+    padding-left: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#map {
+    z-index:10;
+    height: 65vh;
+}
+
+#barogram {
+    cursor: crosshair;
+    z-index: 1;
+    height: 65vh;
+    background: #E0FFFF;
+}
+
+#righthalf   {
+position: absolute;
+top:0;
+left: 0;
+visibility: hidden;
+}
+
+#headerInfo th {
+    text-align: left;
+    font-weight: bold;
+}
+
+#infobox {
+position: relative;
+}
+
+#showmap {
+position: absolute;
+top: 61vh;
+z-index: 15;
+display: none;
+}
+
+#mapbuttons {
+position: absolute;
+top: 0;
+right: 0;
+z-index: 20;
+}
+
+#zoomdiv {
+position: absolute;
+top: 8vh;
+width: 90%;
+background-color: white;
+z-index: 1;
+}
+
+#slider {
+    position: absolute;
+    top: 68vh;
+    width: 95%;
+    padding-bottom: 10px;
+}
+
+#poswrapper {
+    position: absolute;
+    top: 75vh;
+}
+
+button.toggle {
+float: right;
+margin-top: 0px;
+margin-bottom: 0px;
+}
+
+button, .inbutton,#fileControl  {
+    height: 33px;
+    font-size: 15px;
+    margin: 5px;
+}
+
+#height,#thermal {
+height: 45px;
+}
+
+div.colour {
+    background-color: aqua;
+}
+
+}    
